--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.10.2",
+    "@syncfusion/ej2-vue-dropdowns": "^19.3.47",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
